Fix spacing, color in Conpherence Pontificate button
Summary: Spacing got broken during forms update.

Test Plan: View Conpherence

Reviewers: epriestley, btrahan

Reviewed By: epriestley

CC: Korvin, aran

Differential Revision: https://secure.phabricator.com/D6863

--- a/webroot/rsrc/css/application/conpherence/message-pane.css
+++ b/webroot/rsrc/css/application/conpherence/message-pane.css
@@ -76,7 +76,7 @@
 
 .conpherence-message-pane .phui-form-view {
   border-width: 0;
-  background: none;
+  background-color: {$lightgreybackground};
   height: 190px;
   padding: 0;
   position: fixed;
@@ -189,7 +189,7 @@
 }
 
 .conpherence-message-pane .aphront-form-control-submit {
-  margin-right: 8px;
+  margin: 3px 8px 0 0;
 }
 .conpherence-message-pane .remarkup-assist-bar {
   border-width: 1px 0 0;
